force-app/main/default/objects/Asset/fields/eHS_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>eHS_Additional_Information__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Captures reason for PIA or pORA update</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>