force-app/main/default/objects/Asset/fields/eHS_Asset_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>eHS_Asset_Record_Type__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Record Type</label>
    <type>Text</type>
</CustomField>