force-app/main/default/objects/Asset/fields/eHS_Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>eHS_Asset_Type__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Provides a way for different asset types to be filtered on related lists</description>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>eHS Provider Initiative</fullName>
            </value>
            <value>
                <fullName>Health Information System (HIS)</fullName>
            </value>
            <value>
                <fullName>eHS Citizen Initiative</fullName>
                <isActive>false</isActive>
                <label>eHS Citizen Initiative</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>