force-app/main/default/objects/Asset/fields/eHS_Care_Program__c.field-meta.xml
<CustomField>
    <fullName>eHS_Care_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Care Programs contain Panel information for CPAR providers and should be linked to the respective provider&apos;s CIICPAR - CPAR asset.</inlineHelpText>
    <label>Care Program</label>
    <referenceTo>CareProgram</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>