force-app/main/default/objects/Asset/fields/eHS_Custodian_Signature__c.field-meta.xml
<CustomField>
    <fullName>eHS_Custodian_Signature__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the name of the person who signed the pORA</description>
    <label>Custodian Signature</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>