force-app/main/default/objects/Asset/fields/eHS_Custodian_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>eHS_Custodian_Signature_Date__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Captures pORA Signature Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Custodian Signature Date</label>
    <type>Date</type>
</CustomField>