force-app/main/default/objects/Asset/fields/eHS_PIA_ANP__c.field-meta.xml
<CustomField>
    <fullName>eHS_PIA_ANP__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Used to indicate if this item is included in a PIA file</description>
    <label>ANP - Alberta Netcare</label>
    <type>Checkbox</type>
</CustomField>