force-app/main/default/objects/Asset/fields/eHS_PIA_File_Number__c.field-meta.xml
<CustomField>
    <fullName>eHS_PIA_File_Number__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Custom field that captures eHS OIPC PIA File Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OIPC PIA File Number</label>
    <length>180</length>
    <type>Text</type>
</CustomField>