force-app/main/default/objects/Asset/fields/eHS_PIA_Requirements_Met__c.field-meta.xml
<CustomField>
    <fullName>eHS_PIA_Requirements_Met__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Indicates if eHS PIA Requirements Met</description>
    <label>PIA Requirements Met</label>
    <type>Checkbox</type>
</CustomField>