force-app/main/default/objects/Asset/fields/eHS_PORA_Delivered_Date__c.field-meta.xml
<CustomField>
    <fullName>eHS_PORA_Delivered_Date__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Captures the date that the pORA was delivered to Custodian</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivered to Custodian</label>
    <type>Date</type>
</CustomField>