force-app/main/default/objects/Asset/fields/eHS_PORA_HIS__c.field-meta.xml
<CustomField>
    <fullName>eHS_PORA_HIS__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the related HIS for the pORA</description>
    <label>pORA for HIS</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.eHS_Asset_Type__c</field>
            <operation>equals</operation>
            <value>Health Information System (HIS)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>