force-app/main/default/objects/Asset/fields/eHS_PPHS_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>eHS_PPHS_Signature_Date__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Captures the date eHS signed the pORA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PPHS Signature Date</label>
    <type>Date</type>
</CustomField>