force-app/main/default/objects/Asset/fields/eHS_Production_Enabled_Date__c.field-meta.xml
<CustomField>
    <fullName>eHS_Production_Enabled_Date__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Represents date when Vendor has been informed to allow data to flow</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Represents date when Vendor has been informed to allow data to flow</inlineHelpText>
    <label>Production Enabled Date</label>
    <type>Date</type>
</CustomField>