force-app/main/default/objects/Asset/fields/eHS_Production_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>eHS_Production_Live_Date__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Represents date when data is flowing into Netcare/CPAR</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Represents date when data is flowing into Netcare/CPAR</inlineHelpText>
    <label>Production Live Date</label>
    <type>Date</type>
</CustomField>