force-app/main/default/objects/Asset/fields/eHS_PSS_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>eHS_PSS_Accepted_Date__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Captures the date that the PIA or pORA was Accepted</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Accepted Date</label>
    <type>Date</type>
</CustomField>