force-app/main/default/objects/Asset/fields/eHS_PSS_Initiated_Date__c.field-meta.xml
<CustomField>
    <fullName>eHS_PSS_Initiated_Date__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Captures the date that the PIA or pORA was initiated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Initiated Date</label>
    <type>Date</type>
</CustomField>