force-app/main/default/objects/Asset/fields/eHS_PSS_Type__c.field-meta.xml
<CustomField>
    <fullName>eHS_PSS_Type__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Captures the type of PIA or pORA</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expedited PIA</fullName>
            </value>
            <value>
                <fullName>EMR PIA</fullName>
            </value>
            <value>
                <fullName>Full PIA</fullName>
            </value>
            <value>
                <fullName>RTI-PIN/PCR PIA</fullName>
            </value>
            <value>
                <fullName>RTI-Imm/ARI PIA</fullName>
            </value>
            <value>
                <fullName>CII/CPAR Endorsement Letter</fullName>
            </value>
            <value>
                <fullName>pORA3</fullName>
            </value>
            <value>
                <fullName>Cover page update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>