force-app/main/default/objects/Asset/fields/eHS_Shared_HIS__c.field-meta.xml
<CustomField>
    <fullName>eHS_Shared_HIS__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <label>Shared HIS</label>
    <summaryForeignKey>AssetRelationship.AssetId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>