force-app/main/default/objects/Asset/fields/eHS_Status__c.field-meta.xml
<CustomField>
    <fullName>eHS_Status__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Need Status to be a dependent picklist based on Asset Type field</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>eHS_Asset_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Ended</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>