force-app/main/default/objects/Asset/fields/eHS_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>eHS_Status_Reason__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>eHS_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activation in Progress</fullName>
            </value>
            <value>
                <fullName>Activation Stage</fullName>
            </value>
            <value>
                <fullName>Custodian/Facility Delay</fullName>
            </value>
            <value>
                <fullName>Customer Unresponsive</fullName>
            </value>
            <value>
                <fullName>Data Validation</fullName>
            </value>
            <value>
                <fullName>Declined Participation</fullName>
            </value>
            <value>
                <fullName>Facility Change</fullName>
            </value>
            <value>
                <fullName>Facility Closed</fullName>
            </value>
            <value>
                <fullName>Facility Closed (waiting on closure activities)</fullName>
            </value>
            <value>
                <fullName>HIS Active</fullName>
            </value>
            <value>
                <fullName>HIS Inactive</fullName>
            </value>
            <value>
                <fullName>Implementation Complete</fullName>
            </value>
            <value>
                <fullName>Implementation Package Sent</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Messaging Confirmed</fullName>
            </value>
            <value>
                <fullName>Missing Intake Information</fullName>
            </value>
            <value>
                <fullName>Not Eligible - Cancelled</fullName>
            </value>
            <value>
                <fullName>Offboarding</fullName>
            </value>
            <value>
                <fullName>Other - See Notes</fullName>
            </value>
            <value>
                <fullName>Pending PPHS Direction</fullName>
            </value>
            <value>
                <fullName>Pending Validation</fullName>
            </value>
            <value>
                <fullName>Privacy &amp; Security Risk Assessment</fullName>
            </value>
            <value>
                <fullName>Privacy and Security Requirements Not Met</fullName>
            </value>
            <value>
                <fullName>Provider Left Facility</fullName>
            </value>
            <value>
                <fullName>Scheduled Go-Live</fullName>
            </value>
            <value>
                <fullName>Technical Limitations</fullName>
            </value>
            <value>
                <fullName>Technical Requirements Pending</fullName>
            </value>
            <value>
                <fullName>Vendor Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>