force-app/main/default/objects/Asset/fields/eHS_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>eHS_Update_Date__c</fullName>
    <businessOwnerGroup>eHS_Data_Management_Service</businessOwnerGroup>
    <description>Indicates when the PIA or pORA was Updated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Update Date</label>
    <type>Date</type>
</CustomField>