force-app/main/default/objects/Asset/recordTypes/eHS_Initiatives_and_HIS.recordType-meta.xml
<RecordType>
    <fullName>eHS_Initiatives_and_HIS</fullName>
    <active>true</active>
    <description>Used to store Initiatives and Healthcare Information System information</description>
    <label>eHS Initiatives and HIS</label>
</RecordType>