force-app/main/default/objects/Asset/recordTypes/eHS_PIA.recordType-meta.xml
<RecordType>
    <fullName>eHS_PIA</fullName>
    <active>true</active>
    <description>Used to store Privacy Impact Assessment Information for facilities</description>
    <label>eHS PIA</label>
</RecordType>