force-app/main/default/objects/Asset/recordTypes/eHS_pORA.recordType-meta.xml
<RecordType>
    <fullName>eHS_pORA</fullName>
    <active>true</active>
    <description>Used to store Provincial Organizational Readiness Assessment information for facilities</description>
    <label>eHS pORA</label>
</RecordType>