force-app/main/default/objects/Asset/validationRules/OIPC_PIA_File_Number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>OIPC_PIA_File_Number_validation</fullName>
    <active>true</active>
    <description>This field must enforce the following rules,Preserve leading zeros,No commas,No decimals</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(eHS_PIA_File_Number__c)),
    NOT(
        REGEX(
            eHS_PIA_File_Number__c,
            &quot;^[0-9]+$&quot;
        )
    )
)</errorConditionFormula>
    <errorDisplayField>eHS_PIA_File_Number__c</errorDisplayField>
    <errorMessage>OIPC PIA File Number must contain digits only. Commas and decimals are not allowed</errorMessage>
</ValidationRule>