force-app/main/default/objects/Asset/listViews/CIICPAR_Assets.listView-meta.xml
<ListView>
    <fullName>CIICPAR_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>eHS_Production_Live_Date__c</columns>
    <columns>eHS_Production_Enabled_Date__c</columns>
    <columns>ASSET.USAGE_END_DATE</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>eHS_Source_System__c</columns>
    <filterScope>Everything</filterScope>
    <label>CIICPAR Assets</label>
</ListView>