force-app/main/default/objects/Asset/listViews/HIS_Assets.listView-meta.xml
<ListView>
    <fullName>HIS_Assets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>eHS_Production_Live_Date__c</columns>
    <columns>eHS_Production_Enabled_Date__c</columns>
    <columns>ASSET.USAGE_END_DATE</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>eHS_Source_System__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.eHS_Initiatives_and_HIS</value>
    </filters>
    <filters>
        <field>eHS_PSS_Type__c</field>
        <operation>equals</operation>
    </filters>
    <label>HIS Assets</label>
</ListView>